--- a/ROSMAP_ProteomicsTMT_03.enrichment.Rmd
+++ b/ROSMAP_ProteomicsTMT_03.enrichment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "ROSMAP_ProteomicsTMT_03.enrichment"
-author: "Yining Pan"
+author: ""
 date:   "`r format(Sys.Date(), '%B %d, %Y')`"
 output:
   html_document:
