--- a/ROSMAP_ProteomicsTMT_04.signature-2.comparison.Rmd
+++ b/ROSMAP_ProteomicsTMT_04.signature-2.comparison.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "ROSMAP_ProteomicsTMT_04.signature 2.comparison"
-author: "Yining Pan"
+author: ""
 date:   "`r format(Sys.Date(), '%B %d, %Y')`"
 output:
   html_document:
